# marmot

./: CMakeLists.txt  INSTALL.md  LICENSE  README.md  bridge.Dockerfile  bridge_entrypoint.sh  docker-compose.yaml  gen_configs.ipynb  marmot_env.yml  marmot_eval.yml  package.xml
config/: dist10_bestval.yaml  dist10_bestval_yc.yaml  dist2_bestval.yaml  dist2_bestval_yc.yaml  dist5_bestval.yaml  dist5_bestval_yc.yaml  dist_bestval.yaml  dist_bestval_25.yaml  dist_bestval_50.yaml  dist_bestval_75.yaml  dist_bestval_yc.yaml  exp1a_giou3d.yaml  exp1b_giou3d.yaml  exp1c_giou3d.yaml  exp2_iou3d.yaml  exp_besttest.yaml  exp_bestval.yaml  exp_minitrain.yaml  exp_minitrain_sims.yaml  exp_minival.yaml  exp_val.yaml  greedy_bestdist_bestmodel_bestmgmt.yaml  greedy_dist10_ack_conf_mult_05_noyc.yaml  greedy_dist10_ack_conf_mult_05_yc.yaml  greedy_dist10_ack_conf_mult_10_noyc.yaml  greedy_dist10_ack_conf_mult_10_yc.yaml  greedy_dist10_ack_conf_mult_15_noyc.yaml  greedy_dist10_ack_conf_mult_15_yc.yaml  greedy_dist10_ack_conf_mult_20_noyc.yaml  greedy_dist10_ack_conf_mult_20_yc.yaml  greedy_dist10_ack_conf_mult_25_noyc.yaml  greedy_dist10_ack_conf_mult_25_yc.yaml  greedy_dist10_ack_conf_mult_30_noyc.yaml  greedy_dist10_ack_conf_mult_30_yc.yaml  greedy_dist10_ack_conf_mult_40_noyc.yaml  greedy_dist10_ack_conf_mult_40_yc.yaml  greedy_dist10_ack_conf_mult_50_noyc.yaml  greedy_dist10_ack_conf_mult_50_yc.yaml  greedy_dist10_ack_conf_padd_05_noyc.yaml  greedy_dist10_ack_conf_padd_05_yc.yaml  (+681 more)
docker/: bridge.Dockerfile  docker-compose.yaml  experiment_bridge_entrypoint.sh  ros1.Dockerfile  ros1_ar_entrypoint.sh  ros1_cam_entrypoint.sh
docs/: DEVEL.md  INSTALL.md  MOCAP.md  NUSCENES.md
launch/: foxglove_bridge_launch.xml  oakd_demo.launch.py  philbart.launch.py  robot_oakd.launch.py  run_mocap_cam_exp.launch.py  run_mocap_cam_headset_exp.launch.py  run_mocap_cam_noheadset_exp.launch.py  run_mocap_robot_headset_exp.launch.py  run_mocap_robot_noheadset_exp.launch.py  run_nuscenes_exp_besttest.launch.py  run_nuscenes_exp_bestval.launch.py  run_nuscenes_exp_minitrain.launch.py  (+5 more)
(+1634 files in other folders)
